--- a/Geometry-Escape/Packages/manifest.json
+++ b/Geometry-Escape/Packages/manifest.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
+    "com.unity.2d.pixel-perfect": "1.0.1-preview",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.1.1-preview",
     "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "1.0.8",
+    "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.0.7",
+    "com.unity.inputsystem": "0.9.4-preview",
+    "com.unity.mathematics": "1.1.0",
     "com.unity.package-manager-ui": "2.2.0",
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
