--- a/Geometry-Escape/Packages/manifest.json
+++ b/Geometry-Escape/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.2d.pixel-perfect": "1.0.1-preview",
+    "com.unity.2d.pixel-perfect": "2.0.2",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.entities": "0.1.1-preview",
@@ -9,10 +9,9 @@
     "com.unity.ide.vscode": "1.1.2",
     "com.unity.inputsystem": "1.0.0-preview",
     "com.unity.mathematics": "1.1.0",
-    "com.unity.package-manager-ui": "2.2.0",
-    "com.unity.test-framework": "1.0.18",
+    "com.unity.test-framework": "1.1.1",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.1.0",
+    "com.unity.timeline": "1.2.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
